force-app/main/default/objects/PMP_Feature__c/fields/Exists_in_Open__c.field-meta.xml
<CustomField>
    <fullName>Exists_in_Open__c</fullName>
    <label>Exists in Open?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Maybe</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
            <value>
                <fullName>Need to verify</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>