force-app/main/default/objects/PMP_Feature__c/fields/Intapp_JIRA__c.field-meta.xml
<CustomField>
    <fullName>Intapp_JIRA__c</fullName>
    <label>Intapp JIRA #</label>
    <type>TextArea</type>
</CustomField>