force-app/main/default/objects/PMP_Feature__c/fields/Work_Around__c.field-meta.xml
<CustomField>
    <fullName>Work_Around__c</fullName>
    <label>Work Around</label>
    <type>TextArea</type>
</CustomField>